--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   text-align: center;
   box-sizing: border-box;
 }
-
+/* manrope inter */
 @media (max-width: 767px) {
   #root {
     padding: 0rem;
@@ -18,6 +18,7 @@ body {
 
 nav,
 p,
+label,
 a {
   font-family: "Bebas Neue", sans-serif;
   color: #c7c7c7;
