--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,10 @@ a {
   color: #c7c7c7;
   font-family: Inter, sans-serif;
 }
+
+.hero-img {
+  background-image: url("../image1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-y: center;
+}
