--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,37 @@
-@import url("https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&family=Bebas+Neue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 #root {
   margin: 0 auto;
   text-align: center;
   box-sizing: border-box;
 }
 /* manrope inter */
+
+.manrope {
+  font-family: "Manrope", sans-serif;
+}
+
+/* .bebas-neue-regular {
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+} */
+
+/* 
+.manrope-<uniquifier> {
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+} */
+
+/* 
+.inter-<uniquifier> {
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  }
+  */
 
 body {
   background: #000;
@@ -15,9 +42,13 @@ nav,
 p,
 label,
 a {
-  font-family: "Bebas Neue", sans-serif;
   color: #c7c7c7;
-  font-family: Inter, sans-serif;
+  font-family: "Inter", sans-serif;
+}
+
+h1,
+h2 {
+  font-family: "Bebas Neue", sans-serif;
 }
 
 .hero-img {
