--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
   font-family: "Bebas Neue", sans-serif;
   font-weight: 400;
   font-style: normal;
-} */
+  } */
 
 /* 
 .manrope-<uniquifier> {
@@ -49,6 +49,16 @@ a {
 h1,
 h2 {
   font-family: "Bebas Neue", sans-serif;
+}
+
+input,
+textarea {
+  font-family: "Manrope", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 150%;
+  letter-spacing: 0%;
+  color: #fff;
 }
 
 .hero-img {
