--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,10 @@ textarea {
   color: #fff;
 }
 
+img {
+  font-style: italic;
+}
+
 .hero-img {
   background-image: url("../image1.jpg");
   background-repeat: no-repeat;
