--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 #root {
   margin: 0 auto;
   text-align: center;
@@ -36,6 +33,7 @@
 body {
   background: #000;
   overflow-x: hidden;
+  font-display: swap;
 }
 
 nav,
