--- a/src/App.css
+++ b/src/App.css
@@ -3,32 +3,10 @@
   text-align: center;
   box-sizing: border-box;
 }
-/* manrope inter */
 
 .manrope {
   font-family: "Manrope", sans-serif;
 }
-
-/* .bebas-neue-regular {
-  font-family: "Bebas Neue", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  } */
-
-/* 
-.manrope-<uniquifier> {
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
-} */
-
-/* 
-.inter-<uniquifier> {
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
-  }
-  */
 
 body {
   background: #000;
@@ -61,6 +39,11 @@ textarea {
 
 img {
   font-style: italic;
+}
+
+.responsive {
+  width: 250px;
+  place-self: center;
 }
 
 .hero-img {
