Changed image size for only desktop and tablet devices

--- a/src/App.css
+++ b/src/App.css
@@ -41,9 +41,11 @@ img {
   font-style: italic;
 }
 
-.responsive {
-  width: 250px;
-  place-self: center;
+@media (max-width: 768px) {
+  .responsive {
+    width: 250px;
+    place-self: center;
+  }
 }
 
 .hero-img {
